--- a/exercise2.html
+++ b/exercise2.html
@@ -28,6 +28,13 @@
     </ul>
     <dt>tag</dt>
     <dd> <dt>attribute</dt> </dd>
+    <figure>
+        <img src="C:\Users\user\Downloads\download.jpg"
+        alt="flower photo"
+        width="300">
     
+    <figcaption> </figcaption>
+    </figure>
+
 </body>
 </html>
