--- a/exercise2.html
+++ b/exercise2.html
@@ -33,7 +33,7 @@
         alt="flower photo"
         width="300">
     
-    <figcaption> </figcaption>
+    <figcaption> flower photo </figcaption>
     </figure>
 
 </body>
